<resources>
    <string name="app_name">InnovationLabs</string>
    <string name="prompt_email">Email Id</string>
    <string name="prompt_password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="sign_in">Log In</string>
    <string name="register">Register</string>
    <string name="contact_number">Contact Number</string>
    <string name="title_activity_register_page">register_page</string>
    <string name="action_settings">Settings</string>
    <string name="name">Full Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_page">MainPage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
